--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>
             javascript
         </title>
     </head>
     <body>
+        <nav>
+            <a class="nav-enlace" href="francais.html">
+                francais
+            </a>
+        </na>
         <h1>
             calculadora
         </h1>
