--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <nav>
-            <a class="nav-enlace" href="francais.html">
+            <a class="nav-enlace" href="francais.HTML">
                 francais
             </a>
         </na>
