add the francais on nav

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="utf-8">
     <head>
         <title>
             javascript
         </title>
     </head>
     <body>
+        <nav>
+            <a class="nav-enlace" href="francais.html">
+                Francais
+            </a>
+        </nav>    
         <h1>
             calculadora
         </h1>
