--- a/francais.html
+++ b/francais.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/indexx.css" type="text/css">
+    <link rel="stylesheet" href="indexx.css" type="text/css">
     <head>
         <title>
             francais
