--- a/verbes.html
+++ b/verbes.html
@@ -40,7 +40,7 @@
             <tr>
                 <td class="un">
                     "Vouloir"<br/>
-                    <img class="photo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Coraz%C3%B3n.svg/2241px-Coraz%C3%B3n.svg.png">
+                    <img class="vouloir" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Coraz%C3%B3n.svg/2241px-Coraz%C3%B3n.svg.png">
                 </td>
                 <td class="deux">
                     "Être"<br/>
