--- a/francais.html
+++ b/francais.html
@@ -27,7 +27,10 @@
                    </a>
                    <a class="nav-enlace" href="PasseCompose.html">
                     Passé Composé
-              </a>
+                    </a>
+                    <a class="nav-enlace" href="guideb3.html">
+                    guide étudiant basique 3 
+                    </a>
                 </nav>
         </header>
         <p>
