--- a/guideb3.html
+++ b/guideb3.html
@@ -217,6 +217,174 @@
                 </div>
             </center><br/>
             <h2>
+                Les pronoms complémentsd'objet indirects <b>COI</b>
+            </h2>
+            <center>
+                <div class="dixieme">
+                    <table>
+                        <tr>
+                            <th class="premier">
+
+                            </th>
+                            <th class="premier" colspan="2">
+                                <b class="COD">COD</b>
+                            </th>
+                            <th class="premier" colspan="2">
+                                <b class="COI">COI</b>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+
+                            </td>
+                            <td class="premier">
+                                Singuiler
+                            </td>
+                            <td class="premier">
+                                Pluriel
+                            </td>
+                            <td class="premier">
+                                Singuiler
+                            </td>
+                            <td class="premier">
+                                Pluriel
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="premier">
+                                1re personne
+                            </td>
+                            <td>
+                                <b class="COD">
+                                    me/m'*
+                                </b>
+                            <td>
+                                <b class="COD">
+                                    nous
+                                </b>
+                            </td>
+                            <td>
+                                <b class="COI">
+                                    me/m'*
+                                </b>
+                            <td>
+                                <b class="COI">
+                                    nous
+                                </b>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="premier">
+                                2e personne
+                            </td>
+                            <td>
+                                <b class="COD">
+                                    te
+                                </b>/
+                                <b class="COD">
+                                    t´*
+                                </b><br/>
+                            </td>
+                            <td>
+                                <b class="COD">
+                                    vous
+                                </b><br/>
+                            </td>
+                            <td>
+                                <b class="COI">
+                                    te
+                                </b>/
+                                <b class="COI">
+                                    t´*
+                                </b><br/>
+                            </td>
+                            <td>
+                                <b class="COI">
+                                    vous
+                                </b><br/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="premier">
+                                3e personne
+                            </td>
+                            <td>
+                                <b class="COD">
+                                    le
+                                </b>
+                                (m.) /
+                                <b class="COD">
+                                    la
+                                </b>
+                                (f.)
+                            </td>
+                            <td>
+                                <b class="COD">
+                                    les
+                                </b>
+                            </td>
+                            <td>
+                                <b class="COI">
+                                    lui
+                                </b>
+                            </td>
+                            <td>
+                                <b class="COI">
+                                    leur
+                                </b>
+                            </td>
+                        </tr>
+                    </table>
+                    <h3>
+                        différences entre COD et COI
+                    </h3>
+                    <table>
+                        <tr>
+                            <th>
+                                <b class="COD">COD</b><br>
+                                <b class="COD">(le, la, l')</b>
+                            </th>
+                            <th>
+                                <b class="COI">COI</b><br/>
+                                <b class="COI">lui, leur</b>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                &#9830 Personne<br/>
+                                &#9830 Choses
+                            </td>
+                            <td>
+                                &#9827 Seulement personne
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+
+                            </td>
+                            <td>
+                                Seulemant avec prépositions<br/>
+                                <b class="COI">à</b>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                &#8594 apeller (llamar)<br/>
+                                &#8594 écuter (escuchar)<br/>
+                                &#8594 remercier (dar las gracias.)<br/>
+                            </td>
+                            <td>
+                                &#8594 Demander <b class="COI">à</b> (preguntar)<br/>
+                                &#8594 Dire <b class="COI">à</b> (decir)<br/>
+                                &#8594 Écrire <b class="COI">à</b> (preguntar)<br/>
+                                &#8594 Parler <b class="COI">à</b> (preguntar)<br/>
+                                &#8594 Donner <b class="COI">à</b> (dar)<br/>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </center>
+            <h2>
                 Prépositions + noms de pays, de villes et de régions
             </h2>
             <center>
